[admin] chore: Installed bootstrap

--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -38,7 +38,9 @@
                     <div id="navigation">
                         <ul class="navigation-menu">
                             <li class="has-submenu">
-                                <a href="index.html"><i class="ti-home"></i>Dashboard</a>
+                                <a href="index.html">
+                                    <i class="fa fa-home"></i>Dashboard
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -58,6 +60,8 @@
                                 </ol>
                             </div>
                             <h4 class="page-title">Welcome !</h4>
+
+                            <app-root></app-root>
                         </div>
                     </div>
                 </div>
